# mySonosServer

./: .gitignore
esp8266 client/blue_button/: blue_button.ino
sonos_server/: Cargo.toml  Rocket.toml
sonos_server - V2/: Cargo.toml  Rocket.toml
sonos_server - V2/cache/: speaker_info.json
sonos_server - V2/src/: lofty.rs  main.rs  routes.rs  sonos.rs  utils.rs
sonos_server/cache/: speaker_info.json
sonos_server/src/: error_routes.rs  main.rs  routes.rs  sonos.rs  utils.rs
